css/sidebar.css
*,
::after,
::before {
    box-sizing: border-box;
}

body {
    margin: 0;
    background-repeat: no-repeat;
    background-position: center bottom;
    background-size: cover;
}

h3 {
    font-size: 1.2375rem;
    color: #FFF;
}

a {
    cursor: pointer;
    text-decoration: none;
}


/* Layout skeleton */

.wrapper {
    align-items: stretch;
    display: flex;
    width: 100%;
}

#sidebar {
    max-width: 264px;
    min-width: 264px;
    transition: all 0.35s ease-in-out;
    box-shadow: 0 0 35px 0 rgba(49, 57, 66, 0.5);
    z-index: 99;

}

/* Sidebar collapse */

#sidebar.collapsed {
    margin-left: -264px;
}

.main {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    width: 100%;
    overflow: hidden;
    transition: all 0.35s ease-in-out;
}

.sidebar-logo {
    padding: 1.15rem 1.5rem;
}

.sidebar-logo a {
    color: #e9ecef;
    font-size: 1.25rem;
    font-weight: 600;
}

.sidebar-nav {
    padding: 0;
}

.sidebar-header {
    color: #e9ecef;
    font-size: .75rem;
    padding: 1.5rem 1.5rem .375rem;
}

a.sidebar-link {
    padding: .625rem 1.625rem;
    color: #e9ecef;
    position: relative;
    display: block;
    font-size: 1rem;
}

.sidebar-link[data-bs-toggle="collapse"]::after {
    border: solid;
    border-width: 0 .075rem .075rem 0;
    content: "";
    display: inline-block;
    padding: 2px;
    position: absolute;
    right: 1.5rem;
    top: 1.4rem;
    transform: rotate(-135deg);
    transition: all .2s ease-out;
}

.sidebar-link[data-bs-toggle="collapse"].collapsed::after {
    transform: rotate(45deg);
    transition: all .2s ease-out;
}

.content {
    flex: 1;
    max-width: 100vw;
    width: 100vw;
}



.navbar {
    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.toggler{
    z-index: 99;
}


.border-bottom {
    border-bottom: unset;
}

.sidebar-footer {
    height: 50px;
    position: absolute;
    width: 100%;
    bottom: 0;
    list-style-type: none;
    padding-bottom: 5.5em;
}

#topSection h1 {
    font-size: 5rem;
}

#topSection h3 {
    font-weight: lighter;
}

#topSection {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

#scroll-down-button {
    position: absolute;
    right: 2.5vw;
    bottom: 2.5vw;
    background: transparent;
    border-color: transparent;
    cursor: pointer;
    animation: example 1.5s infinite;
    z-index: 99;
}

@keyframes example {
    0% {
        bottom: 2.5vw;
    }
    50% {
        bottom: 3vw;
    }
    100% {
        bottom: 2.5vw;
    }
}

/* Responsive */

@media (max-width: 768px) {
    .content {
        width: auto;
    }

    #topSection h1 {
        font-size: 1.90rem;
    }

    #topSection h4 {
         padding-left: 0px;
    }

    #title_desktop{
        display: none;
    }

    #title_mobile{
    }

    #scroll-down-button{
        display: none;
    }
}

